--- a/app/components/Auction/List/auctionListView.html
+++ b/app/components/Auction/List/auctionListView.html
@@ -33,8 +33,8 @@
                     <div class="auction-label col-xs-12">End auction</div>
                     <div class="auction-cell col-xs-12 col-sm-2 col-md-2 col-lg-2"><span>{{item.end_auction}}</span></div>
                 </div>
-                <div class="auction-button-detail col-xs-12 col-sm-3 col-md-3 col-lg-2"><div class="my-button normal-button"><span>DETAIL</span></div></div>
-                <detail-auction auction-item="{item}" class="detail-auction-directive col-xs-12 col-sm-12 col-md-12 col-lg-12"></detail-auction>
+                <div class="auction-button-detail col-xs-12 col-sm-3 col-md-3 col-lg-2"><div class="my-button normal-button" ng-click="detail(item.ID)"><span>DETAIL</span></div></div>
+                <detail-auction auction-item="{item}" id="{{item.ID}}" class="detail-auction-directive col-xs-12 col-sm-12 col-md-12 col-lg-12"></detail-auction>
             </div>
         </div>
 	</div>
