--- a/app/components/Auction/Shipments/shipmentView.html
+++ b/app/components/Auction/Shipments/shipmentView.html
@@ -1,5 +1,5 @@
 <div class="auction-list-page">
-    <h1>Aukce</h1>
+    <h1>Shipments</h1>
     <div class="auction-list col-xs-12 col-sm-12 col-md-12 col-lg-12 ">
         <div class="auction-header-line col-sm-12 col-md-12 col-lg-12">
             <div class="auction-header col-sm-9 col-md-9 col-lg-10">
@@ -12,7 +12,7 @@
         </div>
         <div class="auction-body col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <div class="auction-item" ng-repeat="item in AuctionList">
-                <detail-auction auction-item="{item}" vehicles="{vehicles}"></detail-auction>
+                <detail-auction auction-item="{item}"></detail-auction>
             </div>
         </div>
 	</div>
