--- a/app/components/Home/homeView.html
+++ b/app/components/Home/homeView.html
@@ -1,24 +1,45 @@
 <h1>Home Page</h1>
-<!--<input type="submit" class="btn btn-primary" ui-sref="shipments" value="{{'texts.Shipments' | i18next}}"/>
-<input type="submit" class="btn btn-primary" ui-sref="AddShipment" value="{{'texts.AddShipment' | i18next}}"/>-->
-
-<input type="submit" class="btn btn-primary" ui-sref="auction" value="Auction"/>
-
-<input ng-if="isSender" type="submit" class="btn btn-primary" ui-sref="addauction" value="Add auction"/>
-<input ng-if="isDispatcher" type="submit" class="btn btn-primary" ui-sref="myauction" value="My auction"/>
-<input ng-if="isSender" type="submit" class="btn btn-primary" ui-sref="createdauction" value="My created auction"/>
-
-
-
-<div ng-if="isDispatcher">
-    <input type="submit" class="btn btn-primary" ui-sref="mysection" value="My section"/>
+<div class="form-group">
+    <div class="my-button important-button" ui-sref="auction" >Auction</div>
 </div>
-
-<div ng-if="isDriver">
-    <input type="submit" class="btn btn-primary" ui-sref="mydrivershipments" value="My shipments"/>
-    
-</div>
-
 <div ng-if="isSender">
-    <input type="submit" class="btn btn-primary" ui-sref="senderswin" value="My created win"/>
+    <div class="form-group">
+      <div class="my-button normal-button" ui-sref="createdauction" >Created auction</div>
+    </div>
+    <div class="form-group">
+      <div class="my-button normal-button" ui-sref="addauction" >Add auction</div>
+    </div>
+</div>
+<div ng-if="isTransporter">
+    <div class="form-group">
+      <div class="my-button normal-button" ui-sref="favouriteauction" >Favourite auction</div>
+    </div>
+    <div class="form-group">
+      <div class="my-button normal-button" ui-sref="bidsauction" >My Bids auction</div>
+    </div>
+    <div class="form-group">
+      <div class="my-button normal-button" ui-sref="winauction" >Win Auction</div>
+    </div>
+    <div class="form-group">
+      <div class="my-button normal-button" ui-sref="ss" >Manage</div>
+    </div>
+</div>
+<div ng-if="isDispatcher">
+    <div class="form-group">
+      <div class="my-button normal-button" ui-sref="favouriteauction" >Favourite auction</div>
+    </div>
+    <div class="form-group">
+      <div class="my-button normal-button" ui-sref="bidsauction" >My Bids auction</div>
+    </div>
+    <div class="form-group">
+      <div class="my-button normal-button" ui-sref="winauction" >Win Auction</div>
+    </div>
+    <div class="form-group">
+      <div class="my-button normal-button" ui-sref="ss" >Manage</div>
+    </div>
+</div>
+<div ng-if="isDriver">
+    <div class="form-group">
+      <div class="my-button normal-button" ui-sref="ss" >My shipments</div>
+    </div>
 </div>
