--- a/app/components/Auction/BidsAuction/bidsAuctionView.html
+++ b/app/components/Auction/BidsAuction/bidsAuctionView.html
@@ -1,5 +1,5 @@
 <div class="auction-list-page">
-    <h1>Aukce</h1>
+    <h1>Bids Auction</h1>
     <div class="auction-list col-xs-12 col-sm-12 col-md-12 col-lg-12 ">
         <div class="auction-header-line col-sm-12 col-md-12 col-lg-12">
             <div class="auction-header col-sm-9 col-md-9 col-lg-10">
