--- a/app/components/Auction/FavouriteAuction/favouriteAuctionView.html
+++ b/app/components/Auction/FavouriteAuction/favouriteAuctionView.html
@@ -1,7 +1,7 @@
 <div class="auction-list-page">
     <h1>Favourite Auction</h1>
     <div class="auction-list col-xs-12 col-sm-12 col-md-12 col-lg-12 ">
-        <div class="auction-header-line col-sm-12 col-md-12 col-lg-12">
+        <div ng-if="AuctionList.length" class="auction-header-line col-sm-12 col-md-12 col-lg-12">
             <div class="auction-header col-sm-9 col-md-9 col-lg-10">
                 <div class="auction-cell col-sm-2 col-md-2 col-lg-2">From</div>
                 <div class="auction-cell col-sm-2 col-md-2 col-lg-2">To</div>
@@ -11,6 +11,7 @@
             </div>
         </div>
         <div class="auction-body col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            <div ng-if="!AuctionList.length" class="no-auction">Žádné dostupné aukce...</div>
             <div class="auction-item" ng-repeat="item in AuctionList">
                 <detail-auction auction-item="{item}" vehicles="{vehicles}"></detail-auction>
             </div>
