--- a/app/components/Auction/WinAuction/winAuctionView.html
+++ b/app/components/Auction/WinAuction/winAuctionView.html
@@ -1,7 +1,7 @@
 <div class="auction-list-page">
     <h1>Win Auction</h1>
     <div class="auction-list col-xs-12 col-sm-12 col-md-12 col-lg-12 ">
-        <div class="auction-header-line col-sm-12 col-md-12 col-lg-12">
+        <div ng-if="AuctionList.length" class="auction-header-line col-sm-12 col-md-12 col-lg-12">
             <div class="auction-header col-sm-9 col-md-9 col-lg-10">
                 <div class="auction-cell col-sm-2 col-md-2 col-lg-2">From</div>
                 <div class="auction-cell col-sm-2 col-md-2 col-lg-2">To</div>
