--- a/app/components/Home/homeView.html
+++ b/app/components/Home/homeView.html
@@ -1,45 +1,47 @@
 <h1>Home Page</h1>
-<div class="form-group">
-    <div class="my-button important-button" ui-sref="auction" >Auction</div>
-</div>
-<div ng-if="isSender">
+<div class="homePage">
     <div class="form-group">
-      <div class="my-button normal-button" ui-sref="createdauction" >Created auction</div>
+        <div class="my-button important-button" ui-sref="auction" >Auction</div>
     </div>
-    <div class="form-group">
-      <div class="my-button normal-button" ui-sref="addauction" >Add auction</div>
+    <div ng-if="isSender">
+        <div class="form-group">
+          <div class="my-button normal-button" ui-sref="createdauction" >Created auction</div>
+        </div>
+        <div class="form-group">
+          <div class="my-button normal-button" ui-sref="addauction" >Add auction</div>
+        </div>
     </div>
-</div>
-<div ng-if="isTransporter">
-    <div class="form-group">
-      <div class="my-button normal-button" ui-sref="favouriteauction" >Favourite auction</div>
+    <div ng-if="isTransporter">
+        <div class="form-group">
+          <div class="my-button normal-button" ui-sref="favouriteauction" >Favourite auction</div>
+        </div>
+        <div class="form-group">
+          <div class="my-button normal-button" ui-sref="bidsauction" >My Bids auction</div>
+        </div>
+        <div class="form-group">
+          <div class="my-button normal-button" ui-sref="winauction" >Win Auction</div>
+        </div>
+        <div class="form-group">
+          <div class="my-button normal-button" ui-sref="ss" >Manage</div>
+        </div>
     </div>
-    <div class="form-group">
-      <div class="my-button normal-button" ui-sref="bidsauction" >My Bids auction</div>
+    <div ng-if="isDispatcher">
+        <div class="form-group">
+          <div class="my-button normal-button" ui-sref="favouriteauction" >Favourite auction</div>
+        </div>
+        <div class="form-group">
+          <div class="my-button normal-button" ui-sref="bidsauction" >My Bids auction</div>
+        </div>
+        <div class="form-group">
+          <div class="my-button normal-button" ui-sref="winauction" >Win Auction</div>
+        </div>
+        <div class="form-group">
+          <div class="my-button normal-button" ui-sref="ss" >Manage</div>
+        </div>
     </div>
-    <div class="form-group">
-      <div class="my-button normal-button" ui-sref="winauction" >Win Auction</div>
-    </div>
-    <div class="form-group">
-      <div class="my-button normal-button" ui-sref="ss" >Manage</div>
-    </div>
-</div>
-<div ng-if="isDispatcher">
-    <div class="form-group">
-      <div class="my-button normal-button" ui-sref="favouriteauction" >Favourite auction</div>
-    </div>
-    <div class="form-group">
-      <div class="my-button normal-button" ui-sref="bidsauction" >My Bids auction</div>
-    </div>
-    <div class="form-group">
-      <div class="my-button normal-button" ui-sref="winauction" >Win Auction</div>
-    </div>
-    <div class="form-group">
-      <div class="my-button normal-button" ui-sref="ss" >Manage</div>
-    </div>
-</div>
-<div ng-if="isDriver">
-    <div class="form-group">
-      <div class="my-button normal-button" ui-sref="ss" >My shipments</div>
+    <div ng-if="isDriver">
+        <div class="form-group">
+          <div class="my-button normal-button" ui-sref="ss" >My shipments</div>
+        </div>
     </div>
 </div>
