--- a/app/components/Auction/List/auctionListView.html
+++ b/app/components/Auction/List/auctionListView.html
@@ -3,11 +3,22 @@
     <div class="auction-list col-xs-12 col-sm-12 col-md-12 col-lg-12 ">
         <div ng-if="AuctionList.length" class="auction-header-line col-sm-12 col-md-12 col-lg-12">
             <div class="auction-header col-sm-9 col-md-9 col-lg-10">
-                <div class="auction-cell col-sm-2 col-md-2 col-lg-2">From</div>
-                <div class="auction-cell col-sm-2 col-md-2 col-lg-2">To</div>
-                <div class="auction-cell col-sm-4 col-md-4 col-lg-4">Freight description</div>
-                <div class="auction-cell col-sm-2 col-md-2 col-lg-2">Price</div>
-                <div class="auction-cell col-sm-2 col-md-2 col-lg-2">End auction</div>
+                <div class="auction-cell col-sm-2 col-md-2 col-lg-2"><span>From</span>
+                    <span ui-sref="auction({sort: 'from'})" class="glyphicon glyphicon-triangle-bottom"></span>
+                </div>
+                <div class="auction-cell col-sm-2 col-md-2 col-lg-2"><span>To</span>
+                    <span ng-click="sort('to')" class="glyphicon glyphicon-triangle-bottom"></span>
+                </div>
+                <div class="auction-cell col-sm-4 col-md-4 col-lg-4"><span>Freight description</span></div>
+                <div class="auction-cell col-sm-2 col-md-2 col-lg-2"><span>Price</span>
+                    <span ng-click="sort('price')" class="glyphicon glyphicon-triangle-bottom"></span>
+                </div>
+                <div class="auction-cell col-sm-2 col-md-2 col-lg-2">
+                    <div>
+                        <span>End auction</span>
+                        <span ng-click="sort('end_auction')" class="glyphicon glyphicon-triangle-bottom"></span>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="auction-body col-xs-12 col-sm-12 col-md-12 col-lg-12">
