--- a/app/components/Auction/List/auctionListView.html
+++ b/app/components/Auction/List/auctionListView.html
@@ -4,19 +4,19 @@
         <div ng-if="AuctionList.length" class="auction-header-line col-sm-12 col-md-12 col-lg-12">
             <div class="auction-header col-sm-9 col-md-9 col-lg-10">
                 <div class="auction-cell col-sm-2 col-md-2 col-lg-2"><span>From</span>
-                    <span ui-sref="auction({sort: 'from'})" class="glyphicon glyphicon-triangle-bottom"></span>
+                    <span ng-click="sort()" ui-sref="auction({sort: 'from', order: order})" class="glyphicon" ng-class="arrowState('from')"></span>
                 </div>
                 <div class="auction-cell col-sm-2 col-md-2 col-lg-2"><span>To</span>
-                    <span ng-click="sort('to')" class="glyphicon glyphicon-triangle-bottom"></span>
+                    <span ng-click="sort()" ui-sref="auction({sort: 'to', order: order})" class="glyphicon" ng-class="arrowState('to')"></span>
                 </div>
                 <div class="auction-cell col-sm-4 col-md-4 col-lg-4"><span>Freight description</span></div>
                 <div class="auction-cell col-sm-2 col-md-2 col-lg-2"><span>Price</span>
-                    <span ng-click="sort('price')" class="glyphicon glyphicon-triangle-bottom"></span>
+                    <span ng-click="sort()" ui-sref="auction({sort: 'price', order: order})" class="glyphicon" ng-class="arrowState('price')"></span>
                 </div>
                 <div class="auction-cell col-sm-2 col-md-2 col-lg-2">
                     <div>
                         <span>End auction</span>
-                        <span ng-click="sort('end_auction')" class="glyphicon glyphicon-triangle-bottom"></span>
+                       <span ng-click="sort()" ui-sref="auction({sort: 'end_auction', order: order})" class="glyphicon" ng-class="arrowState('end_auction')"></span>
                     </div>
                 </div>
             </div>
