--- a/app/components/Home/homeView.html
+++ b/app/components/Home/homeView.html
@@ -22,7 +22,7 @@
           <div class="my-button normal-button" ui-sref="winauction" >Win Auction</div>
         </div>
         <div class="form-group">
-          <div class="my-button normal-button" ui-sref="ss" >Manage</div>
+          <div class="my-button normal-button" ui-sref="manage" >Manage</div>
         </div>
     </div>
     <div ng-if="isDispatcher">
@@ -36,7 +36,7 @@
           <div class="my-button normal-button" ui-sref="winauction" >Win Auction</div>
         </div>
         <div class="form-group">
-          <div class="my-button normal-button" ui-sref="ss" >Manage</div>
+          <div class="my-button normal-button" ui-sref="manage" >Manage</div>
         </div>
     </div>
     <div ng-if="isDriver">
