--- a/app/components/Auction/Add/auctionAddView.html
+++ b/app/components/Auction/Add/auctionAddView.html
@@ -75,7 +75,7 @@
 
     <div class="form-group">
       <div class='input-group datetimepicker1'>
-        <input type='text' name="load_from" class="form-control my-input"  id="load_from" placeholder="{{'texts.date' | i18next}}" 
+        <input type='text' name="load_from" class="form-control my-input"  id="load_from" placeholder="{{'texts.load_from' | i18next}}"
         ng-class="{'input-error' : addAuctionForm.load_from.$invalid && (!addAuctionForm.load_from.$pristine || clicked)}" 
         required/>
         <span class="input-group-addon">
@@ -85,7 +85,7 @@
     </div>
     <div class="form-group">
       <div class='input-group datetimepicker1'>
-        <input type='text' name="load_to" class="form-control my-input"  id="load_to" placeholder="{{'texts.date' | i18next}}" 
+        <input type='text' name="load_to" class="form-control my-input"  id="load_to" placeholder="{{'texts.load_to' | i18next}}"
         ng-class="{'input-error' : addAuctionForm.load_to.$invalid && (!addAuctionForm.load_to.$pristine || clicked)}" 
         required/>
         <span class="input-group-addon">
@@ -95,7 +95,7 @@
     </div>
     <div class="form-group">
       <div class='input-group datetimepicker1'>
-        <input type='text' name="unload_from" class="form-control my-input"  id="unload_from" placeholder="{{'texts.date' | i18next}}" 
+        <input type='text' name="unload_from" class="form-control my-input"  id="unload_from" placeholder="{{'texts.unload_from' | i18next}}"
         ng-class="{'input-error' : addAuctionForm.unload_from.$invalid && (!addAuctionForm.unload_from.$pristine || clicked)}" 
         required/>
         <span class="input-group-addon">
@@ -105,7 +105,7 @@
     </div>
     <div class="form-group">
       <div class='input-group datetimepicker1'>
-        <input type='text' name="unload_to" class="form-control my-input"  id="unload_to" placeholder="{{'texts.date' | i18next}}" 
+        <input type='text' name="unload_to" class="form-control my-input"  id="unload_to" placeholder="{{'texts.unload_to' | i18next}}"
         ng-class="{'input-error' : addAuctionForm.unload_to.$invalid && (!addAuctionForm.unload_to.$pristine || clicked)}" 
         required/>
         <span class="input-group-addon">
@@ -143,7 +143,7 @@
     </div>
     <div class="form-group">
       <div class='input-group datetimepicker1'>
-        <input type='text' name="end_auction" class="form-control my-input"  id="end_auction" placeholder="{{'texts.date' | i18next}}" 
+        <input type='text' name="end_auction" class="form-control my-input"  id="end_auction" placeholder="{{'texts.end_auction' | i18next}}"
         ng-class="{'input-error' : addAuctionForm.end_auction.$invalid && (!addAuctionForm.end_auction.$pristine || clicked)}" 
         required/>
         <span class="input-group-addon">
